# influxdb-app

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: python.yml  terraform.yml
device/src/: engbird.py  sensor_data.py  sensor_status.py
device/tests/: test_engbird.py  test_sensor_data.py
notebooks/: visualize.ipynb
sh/: port-forward.sh
src/: influxdb_client.py
terraform/: main.tf  provider.tf  variables.tf
tests/: test_influxdb_client.py
tests/data/: test.json
