[tool.poetry]
name = "influxdb-app"
version = "0.1.0"
description = ""
authors = ["Masahiro Ishii <marufeuille@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
influxdb-client = "^1.21.0"
requests = "^2.26.0"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
