[tool.poetry]
name = "influxdb-app"
version = "0.1.0"
description = ""
authors = ["Masahiro Ishii <marufeuille@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
influxdb-client = "^1.21.0"
requests = "^2.26.0"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
jupyterlab = "^3.1.13"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
bluepy = "^1.3.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5" # "^5.2"
pysen = {version = "0.9.1", extras = ["lint"]}
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"

[[tool.pysen.lint.mypy_targets]]
  paths = ["src/", "device/src"]

[tool.pysen.lint.source]
  includes = ["src/", "device/src"]

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py37"
